--- a/SeedBag/manifest.json
+++ b/SeedBag/manifest.json
@@ -3,8 +3,8 @@
   "Author": "Platonymous",
   "Version": {
     "MajorVersion": 1,
-    "MinorVersion": 1,
-    "PatchVersion": 2,
+    "MinorVersion": 2,
+    "PatchVersion": 0,
     "Build": null
   },
   "Description": "Adds a Seed Bag to the Game",
@@ -12,7 +12,7 @@
   "EntryDll": "SeedBag.dll",
   "Dependencies": [
     {
-      "UniqueID": "Platonymous.CustomElementHandler"
+      "UniqueID": "Platonymous.Toolkit"
     }
   ],
   "UpdateKeys": [ "Nexus:1133" ]
