--- a/CustomFarmingRedux/CustomFarmingRedux.csproj
+++ b/CustomFarmingRedux/CustomFarmingRedux.csproj
@@ -44,6 +44,7 @@
   <ItemGroup>
     <Compile Include="Config.cs" />
     <Compile Include="CustomFarmingPack.cs" />
+    <Compile Include="CustomFarmingReduxAPI.cs" />
     <Compile Include="CustomFarmingReduxMod.cs" />
     <Compile Include="CustomMachine.cs" />
     <Compile Include="CustomMachineBlueprint.cs" />
