Added Tiled Format

--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -61,6 +61,25 @@
     <Compile Include="Overrides\OvLongevity.cs" />
     <Compile Include="Overrides\OvSpritebatch.cs" />
     <Compile Include="Overrides\OvTV.cs" />
+    <Compile Include="Tiled\EnumHelper.cs" />
+    <Compile Include="Tiled\IXmlFormatable.cs" />
+    <Compile Include="Tiled\NewTiledTmxFormat.cs" />
+    <Compile Include="Tiled\PathHelper.cs" />
+    <Compile Include="Tiled\TiledAnimationFrame.cs" />
+    <Compile Include="Tiled\TiledLayer.cs" />
+    <Compile Include="Tiled\TiledLayerData.cs" />
+    <Compile Include="Tiled\TiledMap.cs" />
+    <Compile Include="Tiled\TiledObject.cs" />
+    <Compile Include="Tiled\TiledObjectGroup.cs" />
+    <Compile Include="Tiled\TiledProperty.cs" />
+    <Compile Include="Tiled\TiledTile.cs" />
+    <Compile Include="Tiled\TiledTileSet.cs" />
+    <Compile Include="Tiled\TiledTileSetImage.cs" />
+    <Compile Include="Tiled\TmxEncoding.cs" />
+    <Compile Include="Tiled\TMXContent.cs" />
+    <Compile Include="Tiled\Utils.cs" />
+    <Compile Include="Tiled\XmlObject.cs" />
+    <Compile Include="Tiled\XmlUtils.cs" />
     <Compile Include="Types\AssetInjector.cs" />
     <Compile Include="Types\ButtonClick.cs" />
     <Compile Include="Extensions\PyCollections.cs" />
