--- a/NoSoilDecayRedux/NoSoilDecayRedux.csproj
+++ b/NoSoilDecayRedux/NoSoilDecayRedux.csproj
@@ -40,12 +40,19 @@
   <ItemGroup>
     <Compile Include="NoSoilDecayReduxMod.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SaveTiles.cs" />
+    <Compile Include="SleepFix.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="manifest.json" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\..\Harmony\Harmony\Harmony.csproj">
+      <Project>{69aee16a-b6e7-4642-8081-3928b32455df}</Project>
+      <Name>Harmony</Name>
+      <Private>False</Private>
+    </ProjectReference>
     <ProjectReference Include="..\PyTK\PyTK.csproj">
       <Project>{a8e6272f-a6a1-4bfe-ba8f-021f63596987}</Project>
       <Name>PyTK</Name>
