--- a/PyTK/PyTK.csproj
+++ b/PyTK/PyTK.csproj
@@ -33,6 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="MoonSharp.Interpreter, Version=2.0.0.0, Culture=neutral, PublicKeyToken=921e73ce94aa17f8, processorArchitecture=MSIL">
+      <HintPath>..\packages\MoonSharp.2.0.0.0\lib\net40-client\MoonSharp.Interpreter.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -43,6 +46,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ConsoleCommands\CCLua.cs" />
     <Compile Include="ConsoleCommands\CcSaveHandler.cs" />
     <Compile Include="ConsoleCommands\CcTime.cs" />
     <Compile Include="CustomElementHandler\CraftingData.cs" />
@@ -57,6 +61,8 @@
     <Compile Include="ConsoleCommands\CcLocations.cs" />
     <Compile Include="CustomElementHandler\ISaveElement.cs" />
     <Compile Include="CustomElementHandler\SaveHandler.cs" />
+    <Compile Include="Lua\LuaUtils.cs" />
+    <Compile Include="Lua\PyLua.cs" />
     <Compile Include="Overrides\OvLocations.cs" />
     <Compile Include="Overrides\OvLongevity.cs" />
     <Compile Include="Overrides\OvSpritebatch.cs" />
