--- a/HarpOfYobaRedux/HarpOfYobaRedux.csproj
+++ b/HarpOfYobaRedux/HarpOfYobaRedux.csproj
@@ -40,6 +40,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Config.cs" />
+    <Compile Include="Magic\LuaMagic.cs" />
     <Compile Include="Magic\TimeMagic.cs" />
     <Compile Include="Magic\AnimalMagic.cs" />
     <Compile Include="Magic\BirthdayMagic.cs" />
