--- a/NewMachinesPack/packages.config
+++ b/NewMachinesPack/packages.config
@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Newtonsoft.Json" version="10.0.2" targetFramework="net462" />
-  <package id="Pathoschild.Stardew.ModBuildConfig" version="1.7.1" targetFramework="net45" />
+  <package id="Pathoschild.Stardew.ModBuildConfig" version="2.1.0-beta-20180426" targetFramework="net45" />
 </packages>
