--- a/Arcade2048/manifest.json
+++ b/Arcade2048/manifest.json
@@ -1,15 +1,11 @@
 {
   "Name": "Arcade 2048",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 0,
-    "PatchVersion": 0,
-    "Build": null
-  },
+  "Version": "1.0.0",
   "Description": "Play 2048.",
   "UniqueID": "Platonymous.2048",
   "EntryDll": "Arcade2048.dll",
+  "MinimumApiVersion": "2.6-beta",
   "UpdateKeys": [ "Nexus:2048" ],
   "Dependencies": [
     {
