--- a/CustomFurnitureAnywhere/manifest.json
+++ b/CustomFurnitureAnywhere/manifest.json
@@ -1,15 +1,12 @@
 {
   "Name": "Custom Furniture Anywhere",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 0,
-    "MinorVersion": 8,
-    "PatchVersion": 1,
-    "Build": null
-  },
+  "Version": "0.8.1",
   "Description": "Makes Custom Furniture work with Furniture Anywhere",
   "UniqueID": "Platonymous.CustomFurnitureAnywhere",
   "EntryDll": "CustomFurnitureAnywhere.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": [ "Nexus:1254" ],
   "Dependencies": [
     {
       "UniqueID": "Platonymous.CustomElementHandler"
@@ -23,6 +20,5 @@
     {
       "UniqueID": "Entoarox.EntoaroxFramework"
     }
-  ],
-  "UpdateKeys": [ "Nexus:1254" ]
+  ]
 }
