--- a/JunimoFarm/manifest.json
+++ b/JunimoFarm/manifest.json
@@ -1,14 +1,10 @@
 {
   "Name": "Junimo Farm",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 1,
-    "PatchVersion": 3,
-    "Build": null
-  },
+  "Version": "1.1.3",
   "Description": "Let Junimos help you on the farm.",
   "UniqueID": "Platonymous.JunimoFarm",
   "EntryDll": "JunimoFarm.dll",
+  "MinimumApiVersion": "2.6-beta",
   "UpdateKeys": [ "Nexus:984" ]
 }
