--- a/NewBuilding/manifest.json
+++ b/NewBuilding/manifest.json
@@ -1,19 +1,15 @@
 {
   "Name": "Aquaponics",
   "Author": "BashNinja",
-  "Version": {
-    "MajorVersion": 0,
-    "MinorVersion": 1,
-    "PatchVersion": 1,
-    "Build": null
-  },
+  "Version": "0.1.1",
   "Description": "Test Mod for CEH 1.3 & SMAPI 1.14",
   "UniqueID": "BashNinja.Aquaponics",
   "EntryDll": "GHAquaponics.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": [],
   "Dependencies": [
     {
       "UniqueID": "Platonymous.CustomElementHandler"
     }
-  ],
-  "UpdateKeys": [ ]
+  ]
 }
