--- a/NoSoilDecayRedux/manifest.json
+++ b/NoSoilDecayRedux/manifest.json
@@ -1,19 +1,15 @@
 {
   "Name": "No Soil Decay Redux",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 4,
-    "PatchVersion": 2,
-    "Build": null
-  },
+  "Version": "1.4.2",
   "Description": "Stops soil from decaying",
   "UniqueID": "Platonymous.NoSoilDecayRedux",
   "EntryDll": "NoSoilDecayRedux.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": [ "Nexus:1084" ],
   "Dependencies": [
     {
       "UniqueID": "Platonymous.Toolkit"
     }
-  ],
-  "UpdateKeys": [ "Nexus:1084" ]
+  ]
 }
