--- a/Portraiture/manifest.json
+++ b/Portraiture/manifest.json
@@ -1,14 +1,10 @@
 {
   "Name": "Portraiture",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 5,
-    "PatchVersion": 1,
-    "Build": null
-  },
+  "Version": "1.5.1",
   "Description": "Helper Mod for Portraits.",
   "UniqueID": "Platonymous.Portraiture",
   "EntryDll": "Portraiture.dll",
+  "MinimumApiVersion": "2.6-beta",
   "UpdateKeys": [ "Nexus:999" ]
 }
