--- a/RingOfFire/manifest.json
+++ b/RingOfFire/manifest.json
@@ -1,19 +1,15 @@
 {
   "Name": "Ring Of Fire",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 0,
-    "PatchVersion": 1,
-    "Build": null
-  },
+  "Version": "1.0.1",
   "Description": "Unleash the Flames",
   "UniqueID": "Platonymous.RingOfFire",
   "EntryDll": "RingOfFire.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": [ "Nexus:1166" ],
   "Dependencies": [
     {
       "UniqueID": "Platonymous.CustomElementHandler"
     }
-  ],
-  "UpdateKeys": [ "Nexus:1166" ]
+  ]
 }
