--- a/Screener/manifest.json
+++ b/Screener/manifest.json
@@ -1,13 +1,10 @@
 {
   "Name": "Screener",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 0,
-    "PatchVersion": 0,
-    "Build": null
-  },
+  "Version": "1.0.0",
   "Description": "Take screenshots from within the game",
   "UniqueID": "Platonymous.Screener",
-  "EntryDll": "Screener.dll"
+  "EntryDll": "Screener.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": []
 }
