--- a/SleepWorker/manifest.json
+++ b/SleepWorker/manifest.json
@@ -1,19 +1,15 @@
 {
   "Name": "SleepWorker",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 0,
-    "PatchVersion": 1,
-    "Build": null
-  },
+  "Version": "1.0.1",
   "Description": "Skips time before you sleep",
   "UniqueID": "Platonymous.SleepWorker",
   "EntryDll": "SleepWorker.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": [ "Nexus:2062" ],
   "Dependencies": [
     {
       "UniqueID": "Platonymous.Toolkit"
     }
-  ],
-  "UpdateKeys": [ "Nexus:2062" ]
+  ]
 }
