--- a/Snake/manifest.json
+++ b/Snake/manifest.json
@@ -1,15 +1,11 @@
 {
   "Name": "Snake",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 0,
-    "PatchVersion": 0,
-    "Build": null
-  },
+  "Version": "1.0.0",
   "Description": "Play Snake.",
   "UniqueID": "Platonymous.Snake",
   "EntryDll": "Snake.dll",
+  "MinimumApiVersion": "2.6-beta",
   "UpdateKeys": [ "Nexus:2048" ],
   "Dependencies": [
     {
