--- a/Speedster/manifest.json
+++ b/Speedster/manifest.json
@@ -1,19 +1,15 @@
 {
   "Name": "Speedster",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 3,
-    "PatchVersion": 1,
-    "Build": null
-  },
+  "Version": "1.3.1",
   "Description": "To the outside world you are just an ordinary farmer, but secretly...",
   "UniqueID": "Platonymous.Speedster",
   "EntryDll": "Speedster.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": [ "Nexus:1102" ],
   "Dependencies": [
     {
       "UniqueID": "Platonymous.CustomElementHandler"
     }
-  ],
-  "UpdateKeys": [ "Nexus:1102" ]
+  ]
 }
