--- a/Sprinkles/manifest.json
+++ b/Sprinkles/manifest.json
@@ -1,13 +1,10 @@
 {
   "Name": "Sprinkles",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 1,
-    "MinorVersion": 2,
-    "PatchVersion": 0,
-    "Build": null
-  },
+  "Version": "1.2.0",
   "Description": "Activate Sprinklers in current location on click",
   "UniqueID": "Platonymous.Sprinkles",
-  "EntryDll": "Sprinkles.dll"
+  "EntryDll": "Sprinkles.dll",
+  "MinimumApiVersion": "2.6-beta",
+  "UpdateKeys": []
 }
