--- a/SwimSuit/manifest.json
+++ b/SwimSuit/manifest.json
@@ -1,14 +1,10 @@
 {
   "Name": "Swim Suit",
   "Author": "Platonymous",
-  "Version": {
-    "MajorVersion": 0,
-    "MinorVersion": 5,
-    "PatchVersion": 1,
-    "Build": null
-  },
+  "Version": "0.5.1",
   "Description": "Swim almost anywhere",
   "UniqueID": "Platonymous.SwimSuit",
   "EntryDll": "SwimSuit.dll",
+  "MinimumApiVersion": "2.6-beta",
   "UpdateKeys": [ "Nexus:1215" ]
 }
